# PointCloudDetector

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.sample.yaml  default.yaml
doc/: BUILDING.md  DEPLOYMENT.md  一种基于点云聚类的雷达算法.pptx
include/: Clustering.h  Config.h  KalmanFilter.h  PcContext.h  PcDetector.h  PcReceiver.h  PcVisualizer.h  Recorder.h  TargetMap.h  Transform.h  VisualizerHelper.h  VoxelGrid.h
resource/: bg2align.stl  bg2filter.stl
src/: Clustering.cpp  KalmanFilter.cpp  PcContext.cpp  PcDetector.cpp  PcReceiver.cpp  PcReceiver_lidar.cpp  PcReceiver_pcd.cpp  PcReceiver_record.cpp  PcVisualizer.cpp  Recorder.cpp  TargetMap.cpp  Transform.cpp  VisualizerHelper_select.cpp  VisualizerHelper_util.cpp  VoxelGrid.cpp  main.cpp
